CARPLAST-55 Change entrypoint Dockerfile